[tool.poetry]
name = "pali-torch"
version = "0.1.0"
description = "Pali - PyTorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/Pali"
repository = "https://github.com/kyegomez/Pali"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]
packages = [
    { include = "pali" },
    { include = "pali/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.6"
transformers = "*"
torch = "*"
einops = "*"
dataclasses = "*"
zetascale = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
